tests/baselines/reference/emitArrowFunctionWhenUsingArguments03.errors.txt
emitArrowFunctionWhenUsingArguments03.ts(1,5): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments03.ts(2,15): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments03.ts (2 errors) ====
    var arguments;
        ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    var a = () => arguments;
                  ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.